// Copyright 2020 The Chromium Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package workflows;

option go_package = "infra/chromeperf/workflows";

import "google/api/field_behavior.proto";
import "google/api/annotations.proto";
import "google/api/resource.proto";
import "infra/chromeperf/workflows/workflow_templates.proto";
import "google/protobuf/empty.proto";

// We're importing the luci-config service proto definition to allow us to refer
// to the service configuration when responding to luci-config.
import "go.chromium.org/luci/common/proto/config/service_config.proto";

// Service definition for the WorkflowTemplates API to support serving, and listing of workflow templates.
service WorkflowTemplates {
  rpc GetWorkflowTemplate (GetWorkflowTemplateRequest) returns (workflows.WorkflowTemplate) {
    option (google.api.http) = {
      get: "/v1{name=/workflow-templates/*}"
    };
  }

  rpc ListWorkflowTemplates (ListWorkflowTemplatesRequest) returns (ListWorkflowTemplatesResponse) {
    option (google.api.http) = {
      get: "/v1/workflow-templates"
    };
  }

  // What follows are luci-config specific RPC endpoints that are HTTP-transcoded to follow the
  // luci-config protocol. Unfortunately these do not follow the aip.dev guidelines.
  rpc ServiceMetadata (google.protobuf.Empty) returns (config.ServiceDynamicMetadata) {
    option (google.api.http) = {
      get: "/service-metadata"
    };
  }

  rpc ValidateConfig (config.ValidationRequestMessage) returns (config.ValidationResponseMessage) {
    option (google.api.http) = {
      // There are no URL-based arguments for this API, so we map all the fields in the body
      // to fields in the config.ValidationRequestMessage.
      post: "/v1/workflow-templates:validate"
      body: "*"
    };
  }
}

message GetWorkflowTemplateRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "engine.perf.apis.cr.dev/WorkflowTemplate"
    }
  ];
}

message ListWorkflowTemplatesRequest {
  int32 page_size = 1;
  string page_token = 2;

  // This allows filtering workflows by name.
  string filter = 3;
}

message ListWorkflowTemplatesResponse {
  repeated workflows.WorkflowTemplate workflow_templates = 1;

  string next_page_token = 2;

  int32 total_size = 3;
}