// Copyright 2015 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
syntax = "proto3";

package ts_mon.proto;

message Any {
  string type_url = 1 [ctype=STRING_PIECE];
  bytes value = 2 [ctype=CORD];
}
